changed class name and id attribute in project files

--- a/public/index.html
+++ b/public/index.html
@@ -22,8 +22,8 @@
               <div class="menu close"><i class="fa fa-bars"></i></div>
               <div class="menu open"><i class="fa fa-times"></i></div>
             </div>
-            <nav class="main-nav">
-              <ul class="main-nav__ul">
+            <nav class="nav">
+              <ul class="nav-ul">
                 <li><a href="#">About</a></li>
                 <li><a href="#">Careers</a></li>
                 <li><a href="#">Events</a></li>
@@ -63,17 +63,17 @@
           <div class="gallery-images">
             <!-- individual images -->
             <div class="image">
-              <div id="zoom-in">
+              <div class="zoom-in">
                 <figure>
                   <img
                     src="./images/mobile/image-deep-earth.jpg"
                     alt=""
-                    id="img-mobile"
+                    class="img-mobile"
                   />
                   <img
                     src="./images/desktop/image-deep-earth.jpg"
                     alt=""
-                    id="img-desktop"
+                    class="img-desktop"
                   />
                   <h3 class="text-inside-image">Deep Earth</h3>
                 </figure>
@@ -81,17 +81,17 @@
             </div>
 
             <div class="image">
-              <div id="zoom-in">
+              <div class="zoom-in">
                 <figure>
                   <img
                     src="./images/mobile/image-night-arcade.jpg"
                     alt=""
-                    id="img-mobile"
+                    class="img-mobile"
                   />
                   <img
                     src="./images/desktop/image-night-arcade.jpg"
                     alt=""
-                    id="img-desktop"
+                    class="img-desktop"
                   />
                   <h3 class="text-inside-image">Night Arcade</h3>
                 </figure>
@@ -99,17 +99,17 @@
             </div>
 
             <div class="image">
-              <div id="zoom-in">
+              <div class="zoom-in">
                 <figure>
                   <img
                     src="./images/mobile/image-soccer-team.jpg"
                     alt=""
-                    id="img-mobile"
+                    class="img-mobile"
                   />
                   <img
                     src="./images/desktop/image-soccer-team.jpg"
                     alt=""
-                    id="img-desktop"
+                    class="img-desktop"
                   />
                   <h3 class="text-inside-image">Soccer Team VR</h3>
                 </figure>
@@ -117,17 +117,17 @@
             </div>
 
             <div class="image">
-              <div id="zoom-in">
+              <div class="zoom-in">
                 <figure>
                   <img
                     src="./images/mobile/image-grid.jpg"
                     alt=""
-                    id="img-mobile"
+                    class="img-mobile"
                   />
                   <img
                     src="./images/desktop/image-grid.jpg"
                     alt=""
-                    id="img-desktop"
+                    class="img-desktop"
                   />
                   <h3 class="text-inside-image">The<br />Grid</h3>
                 </figure>
@@ -135,17 +135,17 @@
             </div>
 
             <div class="image">
-              <div id="zoom-in">
+              <div class="zoom-in">
                 <figure>
                   <img
                     src="./images/mobile/image-from-above.jpg"
                     alt=""
-                    id="img-mobile"
+                    class="img-mobile"
                   />
                   <img
                     src="./images/desktop/image-from-above.jpg"
                     alt=""
-                    id="img-desktop"
+                    class="img-desktop"
                   />
                   <h3 class="text-inside-image">From up above VR</h3>
                 </figure>
@@ -153,17 +153,17 @@
             </div>
 
             <div class="image">
-              <div id="zoom-in">
+              <div class="zoom-in">
                 <figure>
                   <img
                     src="./images/mobile/image-pocket-borealis.jpg"
                     alt=""
-                    id="img-mobile"
+                    class="img-mobile"
                   />
                   <img
                     src="./images/desktop/image-pocket-borealis.jpg"
                     alt=""
-                    id="img-desktop"
+                    class="img-desktop"
                   />
                   <h3 class="text-inside-image">Pocket borealis</h3>
                 </figure>
@@ -171,17 +171,17 @@
             </div>
 
             <div class="image">
-              <div id="zoom-in">
+              <div class="zoom-in">
                 <figure>
                   <img
                     src="./images/mobile/image-curiosity.jpg"
                     alt=""
-                    id="img-mobile"
+                    class="img-mobile"
                   />
                   <img
                     src="./images/desktop/image-curiosity.jpg"
                     alt=""
-                    id="img-desktop"
+                    class="img-desktop"
                   />
                   <h3 class="text-inside-image">The curiosity</h3>
                 </figure>
@@ -189,17 +189,17 @@
             </div>
 
             <div class="image">
-              <div id="zoom-in">
+              <div class="zoom-in">
                 <figure>
                   <img
                     src="./images/mobile/image-fisheye.jpg"
                     alt=""
-                    id="img-mobile"
+                    class="img-mobile"
                   />
                   <img
                     src="./images/desktop/image-fisheye.jpg"
                     alt=""
-                    id="img-desktop"
+                    class="img-desktop"
                   />
                   <h3 class="text-inside-image">Make it fisheye</h3>
                 </figure>
