--- a/public/index.html
+++ b/public/index.html
@@ -229,10 +229,10 @@
           </div>
           <div class="company-socials">
             <div class="social-icons">
-              <span><i class="fab fa-facebook-square"></i></span>
-              <span><i class="fab fa-twitter"></i></span>
-              <span><i class="fab fa-pinterest"></i></span>
-              <span><i class="fab fa-instagram"></i></span>
+              <span><i class="fab fa-facebook-square" aria-hidden="true"></i></span>
+              <span><i class="fab fa-twitter" aria-hidden="true"></i></span>
+              <span><i class="fab fa-pinterest" aria-hidden="true"></i></span>
+              <span><i class="fab fa-instagram" aria-hidden="true"></i></span>
             </div>
             <div class="copyright">
               &copy;<span class="current-year"></span> Loopstudios. All rights
